# lab1_matrix

./: CMakeLists.txt  OperationsMatrix.h  README.md  UI.c  UI.h  algebra.h  algebra_complex.c  algebra_complex.h  algebra_double.c  algebra_double.h  algebra_int.h  algebra_other.h  complex.c  complex.h  errorExceptions.h  main.c  matrix.h  matrix_int.c  matrix_other.c  test.h
